--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,201 @@
-.App {
-  text-align: center;
+.ProductImage img {
+    width: 100%;
+    max-width: 550px;
+    height: 250px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.ProductTable {
+    width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.ProductTable th,
+td {
+    border: 1px solid #999;
+    padding: 20px;
+}
+
+.ProductTable th {
+    background: #5b5b59;
+    color: white;
+    border-radius: 0;
+    top: 0;
+    padding: 10px;
+    width: 100%;
+    max-width: 33%;
+}
+
+.UserForm {
+    display: flex;
+    flex-direction: column;
+}
+
+.UserForm input {
+    width: 98%;
+    border: 2px solid #F8F2A7;
+    color: #4B5F5B;
+    transition: all 500ms ease-out;
+    height: 40px;
+    margin-bottom: 0px;
+    border-radius: 20px;
+    padding-left: 20px;
+}
+
+.UserForm label {
+    font-size: 18px;
+    margin: 0px 15px;
+    margin-bottom: 8px;
+}
+
+.UserForm select {
+    width: 100%;
+    height: 40px;
+    margin-bottom: 20px;
+}
+
+.UserForm input::placeholder {
+    font-size: 16px;
+}
+
+.UserForm .SubmitUser {
+    width: 80px;
+    background: darkgoldenrod;
+    padding: 0;
+    color: black;
+    border: 2px solid #F8F2A7;
+    height: 40px;
+    border-radius: 20px;
+    margin-bottom: 20px;
+}
+.UserDate {
+    width: 180px;
+    height: 30px;
+    text-align: center;
+    font-size: 16px;
+    border: 2px solid #F8F2A7;
+    border-radius: 20px;
+    margin: 20px 2px;
+}
+.ProductGrid {
+    margin-top: 20px;
+}
+
+.ViewAction {
+    display: flex;
+}
+
+/* -----------------------------------LOG IN */
+.LoginContainer {
+    display: flex;
+    justify-content: center;
+}
+.LoginContainer img{
+    margin-bottom: 20px;
+}
+
+.LoginForm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #4B5F5B;
+    margin: 20px 50px;
+    padding: 30px;
+    width: 320px;
+    height: 380px;
+    border-radius: 15px;
+    box-shadow: 0px 5px 9px 3px #64896A;
+}
+
+.LoginForm h1 {
+    color: #C0E66E;
+    margin: 30px 0 20px 0;
+}
+
+.LoginForm input {
+    background: #F8F2A7;
+    border: 2px solid #F8F2A7;
+    outline: none;
+    color: #4B5F5B;
+    transition: all 500ms ease-out;
+    height: 30px;
+    margin-bottom: 20px;
+    border-radius: 20px;
+    padding-left: 20px;
+}
+.LoginForm input:focus {
+    border: 2px solid #C0E66E;
+}
+
+.LoginForm button {
+    background: #C0E66E;
+    border: 1px solid #64896A;
+    margin: 60px 15px 20px 15px;
+    color: #4B5F5B;
+    transition: all 500ms ease-out;
+    animation: lights 4000ms infinite ease-in;
+    height: 30px;
+    width: 100px;
+    border-radius: 30px;
+    margin-top: 30px;
+}
+
+.LoginForm button:hover {
+    border: 1px solid #F8F2A7;
+    box-shadow: 0px 0px 10px 2px #F8F2A7;
+    animation: none;
+}
+
+
+/* --------------------------------------------------popup */
+.popUpTableHead{
+    border-bottom: 2px solid rgb(173, 46, 46);
   }
+  .popUpTableHead th{
+    padding: 20px;
+    text-align: left;
+  }
+  .popUpTableData{
+    background-color: rgb(241, 244, 246);
+  }
+  .popUpTableData td{
+    padding: 20px;
+  }
+  .popUpTable{
+    width: 100%;
+    border-collapse: collapse;
+  }
+  .GrandTotalsec {
+    float: right;
+    margin-top: 30px;
+    margin-right: 40px
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.GrandTotalsec p {
+  margin: 6px 0;
+  font-size: 14px;
+}
+.GrandTotalsec h2 {
+  margin: 0;
+  color: brown;
+  font-family: "BarlowRegular";
+  font-size: 16px;
+}
+.PdfDownload{
+margin-top: 20px;
+margin-bottom: 20px;
+}
+.PdfDownload button{
+  border-radius: 5px;
+  padding: 5px;
+  background: #e3a1a1;
+  border: 1px solid brown;
+}
+.CloseButton {
+  float: right;
+  position: relative;
+  top: -20px;
+  border-radius: 50%;
+  background-color: #e3a1a1;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  border: 2px solid brown;
+  font-size: 18px;
+  right: 10px;
 }
