--- a/src/App.css
+++ b/src/App.css
@@ -281,7 +281,7 @@ margin-bottom: 20px;
   .Navigation {
     width: 100%;
     height: 100vh;
-    max-height: 10vh;
+    max-height: 100px;
     background: black;
     color: white;
     position: sticky;
@@ -295,7 +295,7 @@ margin-bottom: 20px;
   text-decoration: none;
   margin: 10px;
   font-size: 1.5rem;
-  animation: glow 1s infinite ;
+  /* animation: glow 1s infinite ; */
   background: transparent;
 }
 .Navigation button{
